fixing pictues placement

--- a/index.html
+++ b/index.html
@@ -138,10 +138,14 @@
         and sculpting your body.
       </p>
     </div>
+    
+        
     <div class="img-container">
       <img src="img/Emsculpt-3.jpg" alt="how emsculpt works" />
     </div>
     <h2>Before and After Results</h2>
+    <div class="flex-columns">
+      <div class="row">
 
     <div class="slider">
       <div class="slider responsive">
@@ -188,6 +192,7 @@
           <img src="img/m-abs2.png" />
         </div>
       </div>
+    </div>
     </div>
 
     <script
