--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
     <h2>Before and After Results</h2>
     <div class="flex-columns">
-      <div class="row">
+      <div class="row" column>
 
     <div class="slider">
       <div class="slider responsive">
